Build and publish libeigen3-dev 3.4.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,5 @@ jobs:
       # Checkout
       - uses: actions/checkout@v4
 
-      # Build
-      - name: Build OpenCV
-        run: ./scripts/build-opencv-jetson-r32.sh
+      - name: Build Eigen
+        run: ./scripts/build-eigen-jetson-r32.sh
