--- a/docker/Dockerfile.eigen-jetson-r32
+++ b/docker/Dockerfile.eigen-jetson-r32
@@ -3,43 +3,15 @@ FROM nvcr.io/nvidia/l4t-base:r32.7.1
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install various implicit dependencies for `nvidia-l4t-core` and `nvidia-jetpack`
-RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
-    --mount=target=/var/cache/apt,type=cache,sharing=locked \
-    rm -f /etc/apt/apt.conf.d/docker-clean && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends \
-      apt-utils \
-      ca-certificates \
-      gnupg2
-
-# Add NVIDIA Jetson repositories (common + arch-specific) and install `nvidia-l4t-core` package
-RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
-    --mount=target=/var/cache/apt,type=cache,sharing=locked \
-    echo "deb https://repo.download.nvidia.com/jetson/common r32.7 main" >> /etc/apt/sources.list && \
-    echo "deb https://repo.download.nvidia.com/jetson/t210 r32.7 main" >> /etc/apt/sources.list && \
-    apt-key adv --fetch-key http://repo.download.nvidia.com/jetson/jetson-ota-public.asc && \
-    mkdir -p /opt/nvidia/l4t-packages/ && \
-    touch /opt/nvidia/l4t-packages/.nv-l4t-disable-boot-fw-update-in-preinstall && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends --option=Dpkg::Options::="--force-confnew" \
-      nvidia-l4t-core
-
-# Install NVIDIA Jetpack
-RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
-    --mount=target=/var/cache/apt,type=cache,sharing=locked \
-    apt-get update && \
-    apt-get install -y --no-install-recommends \
-      nvidia-jetpack
-
 # Add the CMake official PPA
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     --mount=target=/var/cache/apt,type=cache,sharing=locked \
     apt-get update && \
     apt-get install -y --no-install-recommends \
     apt-transport-https \
+    apt-utils \
     ca-certificates \
-    gnupg \
+    gnupg2 \
     software-properties-common \
     wget && \
     wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | apt-key add - && \
