--- a/docker/Dockerfile.eigen-x64
+++ b/docker/Dockerfile.eigen-x64
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.2
-FROM nvcr.io/nvidia/l4t-base:r32.7.1
+FROM ubuntu:jammy
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -12,10 +12,11 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     apt-utils \
     ca-certificates \
     gnupg2 \
+    libssl-dev \
     software-properties-common \
     wget && \
-    wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | apt-key add - && \
-    apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
+    wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null && \
+    echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
 
 # Install build dependencies
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
@@ -25,9 +26,9 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     build-essential \
     cmake \
     file \
-    ninja-build \
     git \
     git-lfs \
+    ninja-build \
     pkg-config
 
 # Install Eigen dependencies
