--- a/docker/Dockerfile.awssdk-jetson-r32
+++ b/docker/Dockerfile.awssdk-jetson-r32
@@ -3,7 +3,7 @@ FROM nvcr.io/nvidia/l4t-base:r32.7.1
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install various implicit dependencies for `nvidia-l4t-core` and `nvidia-jetpack`
+# Install various dependencies for apt and git
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     --mount=target=/var/cache/apt,type=cache,sharing=locked \
     rm -f /etc/apt/apt.conf.d/docker-clean && \
@@ -12,25 +12,6 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
       apt-utils \
       ca-certificates \
       gnupg2
-
-# Add NVIDIA Jetson repositories (common + arch-specific) and install `nvidia-l4t-core` package
-RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
-    --mount=target=/var/cache/apt,type=cache,sharing=locked \
-    echo "deb https://repo.download.nvidia.com/jetson/common r32.7 main" >> /etc/apt/sources.list && \
-    echo "deb https://repo.download.nvidia.com/jetson/t210 r32.7 main" >> /etc/apt/sources.list && \
-    apt-key adv --fetch-key http://repo.download.nvidia.com/jetson/jetson-ota-public.asc && \
-    mkdir -p /opt/nvidia/l4t-packages/ && \
-    touch /opt/nvidia/l4t-packages/.nv-l4t-disable-boot-fw-update-in-preinstall && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends --option=Dpkg::Options::="--force-confnew" \
-      nvidia-l4t-core
-
-# Install NVIDIA Jetpack
-RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
-    --mount=target=/var/cache/apt,type=cache,sharing=locked \
-    apt-get update && \
-    apt-get install -y --no-install-recommends \
-      nvidia-jetpack
 
 # Add the CMake official PPA
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
@@ -64,7 +45,8 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     apt-get update && \
     apt-get install -y --no-install-recommends \
     libcurl4-openssl-dev \
-    libssl-dev
+    libssl-dev \
+    zlib1g-dev
 
 WORKDIR /usr/src
 
