--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,6 @@ jobs:
 
       - name: Build Eigen (Jetson R32)
         run: ./scripts/build.sh jetson-r32 eigen
+
+      - name: Test installation (x64)
+        run: ./scripts/ci-install-test.sh x64
