install cuda in x64 ci test

--- a/docker/Dockerfile.ci-install-test-x64
+++ b/docker/Dockerfile.ci-install-test-x64
@@ -14,6 +14,15 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
       gnupg2 \
       wget
 
+# Install CUDA Toolkit
+RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
+    --mount=target=/var/cache/apt,type=cache,sharing=locked \
+    wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb && \
+    dpkg -i cuda-keyring_1.1-1_all.deb && \
+    rm cuda-keyring_1.1-1_all.deb && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends cuda-toolkit-12-0
+
 # Setup our PPA and install OpenCV
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     --mount=target=/var/cache/apt,type=cache,sharing=locked \
