Many fixes, integration tests (#7)

--- a/docker/Dockerfile.ceres-x64
+++ b/docker/Dockerfile.ceres-x64
@@ -38,23 +38,15 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     dpkg -i cuda-keyring_1.1-1_all.deb && \
     rm cuda-keyring_1.1-1_all.deb && \
     apt-get update && \
-    apt-get install -y --no-install-recommends cuda-toolkit-12-2
+    apt-get install -y --no-install-recommends cuda-toolkit-12-0
 
-# Setup our PPA and install eigen
-RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
-    --mount=target=/var/cache/apt,type=cache,sharing=locked \
-    wget -qO- https://repo.download.mvi.llc/jhurliman-public-key.asc | gpg --no-default-keyring --keyring /usr/share/keyrings/jhurliman.gpg --import && \
-    echo "deb [signed-by=/usr/share/keyrings/jhurliman.gpg] https://repo.download.mvi.llc/ubuntu/x64 jammy main" >> /etc/apt/sources.list.d/mvi-ppa.list && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends \
-    libeigen3-dev
-
-# Install BLAS and LAPACK (ceres dependencies)
+# Install eigen, BLAS, and LAPACK (ceres dependencies)
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     --mount=target=/var/cache/apt,type=cache,sharing=locked \
     apt-get update && \
     apt-get install -y --no-install-recommends \
     libblas-dev \
+    libeigen3-dev=3.4.0-2ubuntu2 \
     liblapack-dev \
     liblapacke-dev
 
