--- a/docker/Dockerfile.opencv-x64
+++ b/docker/Dockerfile.opencv-x64
@@ -38,7 +38,7 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     dpkg -i cuda-keyring_1.1-1_all.deb && \
     rm cuda-keyring_1.1-1_all.deb && \
     apt-get update && \
-    apt-get install -y --no-install-recommends cuda-toolkit-12-2
+    apt-get install -y --no-install-recommends cuda-toolkit-12-0
 
 # Setup our PPA and install eigen and ceres
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
@@ -47,8 +47,8 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     echo "deb [signed-by=/usr/share/keyrings/jhurliman.gpg] https://repo.download.mvi.llc/ubuntu/x64 jammy main" >> /etc/apt/sources.list.d/mvi-ppa.list && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-    libeigen3-dev \
-    libceres-dev
+    libceres-dev=2.2.0 \
+    libeigen3-dev=3.4.0-2ubuntu2
 
 # Install other OpenCV dependencies
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
